src/components/CustomScripts/CustomScripts.scss
$terminal-color: rgb(37, 37, 37);
$top-bar-color: #c0c0c0;
$exit-red: rgb(255, 68, 68);
$minimize-yellow: rgb(255, 225, 57);
$maximize-green: rgb(0, 185, 0);
$terminal-button-color: rgb(94, 94, 94);

$terminal-border-radius: 10px;
$circle-size: 20px;

#custom-scripts-tab {
    h1 {
        text-align: center;
    }
}

#terminal-tool-bar {
    display: flex;
    flex-direction: row;

    background-color: $top-bar-color;
    height: 40px;
    border-top-left-radius: $terminal-border-radius;
    border-top-right-radius: $terminal-border-radius;
    margin: 30px 30px 0 30px;
    padding: 10px;

    .circle {
        width: $circle-size;
        height: $circle-size;
        border-radius: $circle-size;
        margin: 0 5px;
    }

    #red {
        background-color: $exit-red;
    }

    #yellow {
        background-color: $minimize-yellow;
    }

    #green {
        background-color: $maximize-green;
    }

    #collapse-button {
        margin-left: auto;
    }

    .terminal-button {
        background-color: $top-bar-color;
        border: none;
        color: $terminal-button-color;
        font-size: 24px;
        cursor: pointer;
        padding: 0;
        align-self: center;
    }
}

#terminal-window {
    background-color: $terminal-color;
    border-bottom-left-radius: $terminal-border-radius;
    border-bottom-right-radius: $terminal-border-radius;
    margin: 0 30px;
    padding: 20px;
}

.command-header {
    display: flex;
    flex-direction: row;

    margin: 10px;
    font-size: 24px;
    font-family: 'Courier New', Courier, monospace;

    .dollar {
        color: greenyellow;
        margin-right: 10px;
        align-self: center;
    }

    .command {
        color: white;
        align-self: center;
    }

    .argument {
        color: rgb(255, 79, 79);
        margin-left: 10px;
        align-self: center;
    }

    .button-copy {
        margin-left: auto;
    }

    .show-checkbox {
        margin: 5px 0 0 auto;
        color: white;
    }

    .show-checkbox input[type="checkbox"],
    .show-checkbox .checked {
        display: none;
    }

    .show-checkbox input[type="checkbox"]:checked~.checked {
        display: inline-block;
    }

    .show-checkbox input[type="checkbox"]:checked~.unchecked {
        display: none;
    }
}

.command-body {
    margin: 10px;

    p{
        color: white;
    }
}

